feat: api docs update
